[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/weapons/bigsword.png" type="Texture" id=1]
[ext_resource path="res://art/inventory.png" type="Texture" id=2]
[ext_resource path="res://inventory/inventory/draggeditemteszt2.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.8807, 29.1404 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.3506, 30.6994 )

[node name="draggeditemteszt2" type="KinematicBody2D"]
z_index = 100
input_pickable = true
collision_layer = 65536
collision_mask = 2147549184
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.53907, 0.668174 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.89543, 1.55907 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.603922, 0.152941, 0.380392, 1 )
position = Vector2( -2.13818, 0.801819 )
scale = Vector2( 0.324812, 0.458447 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -3.45223, 0.668187 )
scale = Vector2( 1.88007, 1.84688 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 233.417, 226.807, 13.6225, 32.3534 )
[connection signal="input_event" from="." to="." method="_on_KinematicBody2D_input_event"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
